--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1"
